dataset1235/2025-2/610742602/users/3642541582/executions/906907063_291286518.log
== SUBMISSION (2025-08-21 20:55:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite um número inteiro: "))
dobro = num * 2
# Impressao do dobro do numero
print(f"{dobro}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite um número inteiro: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite um número inteiro: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite um número inteiro: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite um número inteiro: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite um número inteiro: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 20:55:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite um número inteiro: "))
dobro = num * 2
# Impressao do dobro do numero
print(f"{dobro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite um número inteiro: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite um número inteiro: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite um número inteiro: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite um número inteiro: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite um número inteiro: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 20:54:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite um numero inteiro: "))

# Impressao do dobro do numero
print(f"{dobro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 20:54:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite um numero inteiro: "))

# Impressao do dobro do numero
print(f"{dobro}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(f"{dobro}")
             ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
